<resources>
    <string name="app_name">Chat Application (Chatterly)</string>
    <string name="app">Chatterly</string>
    <string name="app_icon">app icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sign_in">Sign In</string>
    <string name="txtSignIn">Already have an account ? Sign In</string>
    <string name="txtSignUp">Don\'t have an account ? Sign Up</string>
    <string name="settings">Settings</string>

    <string-array name="spinner_items_gender">
        <item>Prefer not to say</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="default_web_client_id" translatable="false">537744600808-0qv22aq9v3qmrvtrvr3k0fmiktndrisq.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultBio">Hello there ! Chatting my way through Chatterly.</string>
    <string name="menu_button">menu button</string>
    <string name="connection">connection status</string>
</resources>