<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp120"
                android:paddingTop="@dimen/dp28"
                android:padding="@dimen/dp10"
                android:contentDescription="@string/app_icon"
                android:src="@drawable/chat_app_icon_circle" />


            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                style="@style/sign_up"
                android:layout_height="@dimen/dp60"
                android:layout_marginStart="@dimen/dp25"
                android:layout_marginEnd="@dimen/dp25"
                android:layout_marginTop="@dimen/dp18"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="@dimen/dp12"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/dp12"
                android:paddingEnd="@dimen/dp12" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                style="@style/sign_up"
                android:layout_height="@dimen/dp60"
                android:layout_marginStart="@dimen/dp25"
                android:layout_marginEnd="@dimen/dp25"
                android:layout_marginTop="@dimen/dp18"
                android:layout_marginBottom="@dimen/dp18"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="@dimen/dp12"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dp12"
                android:paddingEnd="@dimen/dp12" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/txtSignUp"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_blue"
                android:textColor="@color/bg_grey_light"
                android:text="@string/sign_in" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp20"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/dp10"
                    android:paddingStart="@dimen/dp1"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="@dimen/dp30"
                        android:layout_height="@dimen/dp30"
                        android:background="@color/white"
                        android:layout_marginStart="@dimen/dp10"
                        android:src="@drawable/ic_google"
                        android:scaleType="centerCrop"/>

                    <Button
                        android:id="@+id/google_signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/white"
                        android:paddingStart="@dimen/dp9"
                        android:paddingEnd="@dimen/dp4"
                        android:text="@string/google"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:cornerRadius="@dimen/dp1" />
                </androidx.appcompat.widget.LinearLayoutCompat>



                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/dp10"
                    android:paddingStart="@dimen/dp1"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dp10"
                    android:background="@drawable/button_rounded"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="@dimen/dp30"
                        android:layout_height="@dimen/dp30"
                        android:background="@color/white"
                        android:layout_marginStart="@dimen/dp10"
                        android:src="@drawable/ic_fb"
                        android:scaleType="centerCrop"/>
                    <Button
                        android:id="@+id/fb_signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        android:clickable="false"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/white"
                        android:textSize="15sp"
                        android:paddingStart="@dimen/dp9"
                        android:paddingEnd="@dimen/dp4"
                        android:layout_alignParentTop="true"
                        app:cornerRadius="@dimen/dp1"
                        android:layout_centerHorizontal="true"/>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>